# robotics_second_project

./: .gitignore  CMakeLists.txt  README.md  config_mapping.rviz  config_nav.rviz  info.txt  package.xml  rviz.rviz  waypoints.csv
cd/: CMakeLists.txt  package.xml
cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  st_config_2d_scan.yaml  st_config_scan.yaml  teb_local_planner_params.yaml
launch/: amcl.launch  amcl.launch.xml  controller.launch  gmapping.launch  gmapping.launch.xml  scan_convertion.launch  second_project.launch  single_lidar.launch  slam_toolbox_2d_scan.launch  slam_toolbox_scan.launch  transforms.launch
maps_raw/: map_bag1_2d_scan.pgm  map_bag1_2d_scan.yaml  map_bag1_scan.pgm  map_bag1_scan.yaml  map_bag2_2d_scan.pgm  map_bag2_2d_scan.yaml  map_bag2_scan.pgm  map_bag2_scan.yaml  turtlebot.inc
maps_raw/stage/: maze.world  turtlebot.inc
src/: navigation.cpp  tf_publisher.cpp
stage/: final_map.yaml  maze.world
stage/src/: stageros.cpp
